# simple_alarm

./: pyproject.toml
src/: alarm.py  main.py
